--- a/youtube.html
+++ b/youtube.html
@@ -4,12 +4,12 @@
       <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <img class="thumbnail" src="thumbnails/thumbnail-1.webp" alt="">
     <input class="search-bar" type="text" placeholder="Search">
-    <p>
+    <img class="thumbnail" src="thumbnails/thumbnail-1.webp" alt="">
+    <p class="video-title">
       Talking Tech and AI with Google CEO Sundar Pichai!
     </p>
-    <p>Marques Brownlee</p>
-    <p>3.4M views &#183; 6 months ago</p>
+    <p class="video-author">Marques Brownlee</p>
+    <p class="video-stats">3.4M views &#183; 6 months ago</p>
   </body>
 </html>
