div element organized

--- a/youtube.html
+++ b/youtube.html
@@ -4,12 +4,21 @@
       <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <input class="search-bar" type="text" placeholder="Search">
-    <img class="thumbnail" src="thumbnails/thumbnail-1.webp" alt="">
-    <p class="video-title">
-      Talking Tech and AI with Google CEO Sundar Pichai!
-    </p>
-    <p class="video-author">Marques Brownlee</p>
-    <p class="video-stats">3.4M views &#183; 6 months ago</p>
+    <input class="search-bar" type="text" 
+    placeholder="Search">
+    
+    <div class="video-preview"></div>
+      <div>
+        <img class="thumbnail" 
+        src="thumbnails/thumbnail-1.webp" alt="">
+      </div>
+      <div>
+        <p class="video-title">
+          Talking Tech and AI with Google CEO 
+          Sundar Pichai!
+        </p>
+        <p class="video-author">Marques Brownlee</p>
+        <p class="video-stats">3.4M views &#183; 6 months ago</p>
+      </div>
   </body>
 </html>
