--- a/youtube.html
+++ b/youtube.html
@@ -1,15 +1,25 @@
 <html>
   <head>
       <title>YouTube Clone</title>
-      <link rel="stylesheet" href="styles/style.css">
+      <link rel="stylesheet" href="styles/general.css">
+      <link rel="stylesheet" href="styles/video.css">
+      <link rel="stylesheet" href="styles/header.css">
 
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <input class="search-bar" type="text" 
-    placeholder="Search">
+    <div class="header">
+      <div class="left-section">
+        left section
+      </div>
+      <div class="middle-section">
+        <input class="search-bar" type="text" placeholder="Search"></div>
+      <div class="right-section">
+        right section
+      </div>
+    </div>
     
     <div class="video-grid">
       <div class="video-preview">
