--- a/youtube.html
+++ b/youtube.html
@@ -12,12 +12,23 @@
   <body>
     <div class="header">
       <div class="left-section">
-        left section
+        <img class="hamburger-icon" src="icons/hamburger-menu.svg" alt="">
+        <img class="youtube-logo" src="icons/youtube-logo.svg" alt="">
       </div>
       <div class="middle-section">
-        <input class="search-bar" type="text" placeholder="Search"></div>
+        <input class="search-bar" type="text" placeholder="Search">
+        <button class="search-button">
+          <img src="icons/search.svg" alt="">
+        </button>
+        <button class="voice-search-button">
+          <img src="icons/voice-search-icon.svg" alt="">
+        </button>
+      </div>
       <div class="right-section">
-        right section
+        <img class="upload-icon" src="icons/upload.svg" alt="">
+        <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="">
+        <img class="notifications-icon" src="icons/notifications.svg" alt="">
+        <img class="channel-picture-icon" src="channel-pictures/channel-1.jpeg" alt="">
       </div>
     </div>
     
