--- a/youtube.html
+++ b/youtube.html
@@ -4,6 +4,7 @@
       <link rel="stylesheet" href="styles/general.css">
       <link rel="stylesheet" href="styles/video.css">
       <link rel="stylesheet" href="styles/header.css">
+      <link rel="stylesheet" href="styles/sidebar.css">
 
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,6 +31,33 @@
         <img class="notifications-icon" src="icons/notifications.svg" alt="">
         <img class="channel-picture-icon" src="channel-pictures/channel-1.jpeg" alt="">
       </div>
+    </div>
+
+    <div class="sidebar">
+      <button class="sidebar-button">
+        <img src="icons/home.svg" alt="">
+        <p>Home</p>
+      </button>
+      <button class="sidebar-button">
+        <img src="icons/explore.svg" alt="">
+        <p>Explore</p>
+      </button>
+      <button class="sidebar-button">
+        <img src="icons/subscriptions.svg" alt="">
+        <p>Subscription</p>
+      </button>
+      <button class="sidebar-button">
+        <img src="icons/originals.svg" alt="">
+        <p>Originals</p>
+      </button>
+      <button class="sidebar-button">
+        <img src="icons/youtube-music.svg" alt="">
+        <p>YouTube Music</p>
+      </button>
+      <button class="sidebar-button">
+        <img src="icons/library.svg" alt="">
+        <p>Library</p>
+      </button>
     </div>
     
     <div class="video-grid">
