--- a/youtube.html
+++ b/youtube.html
@@ -28,7 +28,10 @@
       <div class="right-section">
         <img class="upload-icon" src="icons/upload.svg" alt="">
         <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="">
-        <img class="notifications-icon" src="icons/notifications.svg" alt="">
+        <div class="notification-icon-container">
+          <img class="notifications-icon" src="icons/notifications.svg" alt="">
+          <div class="notification-count">3</div>
+        </div>
         <img class="channel-picture-icon" src="channel-pictures/channel-1.jpeg" alt="">
       </div>
     </div>
@@ -64,9 +67,72 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" 
-          src="thumbnails/thumbnail-4.webp" alt="">
+          src="thumbnails/thumbnail-1.webp" alt="">
+          <div class="video-time">
+            <p>14:20</p>
+          </div>
         </div>
-        <div class="">
+        <div class="channel-info">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pictures/channel-1.jpeg" alt="">
+          </div>
+          <div class="video-info">
+            <p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+            <p class="video-author">Marques Brownlee</p>
+            <p class="video-stats">3.4M views &#183; 6 months ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" 
+          src="thumbnails/thumbnail-2.webp" alt="">
+          <div class="video-time">
+            <p>8:22</p>
+          </div>
+        </div>
+        <div class="channel-info">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pictures/channel-2.jpeg" alt="">
+          </div>
+          <div class="video-info">
+            <p class="video-title">Try Not To Laugh Challenge #9</p>
+            <p class="video-author">Markiplier</p>
+            <p class="video-stats">19M views &#183; 4 years ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" 
+          src="thumbnails/thumbnail-3.webp" alt="">
+          <div class="video-time">
+            <p>9:13</p>
+          </div>
+        </div>
+        <div class="channel-info">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pictures/channel-3.jpeg" alt="">
+          </div>
+          <div class="video-info">
+            <p class="video-title">Crazy Tik Toks Taken Moments Before DISASTER</p>
+            <p class="video-author">SSSniperWolf</p>
+            <p class="video-stats">12M views &#183; 1 year ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" 
+          src="thumbnails/thumbnail-4.webp" alt="">
+          <div class="video-time">
+            <p>22:09</p>
+          </div>
+        </div>
+        <div class="channel-info">
           <div class="channel-picture">
             <img class="profile-picture" src="channel-pictures/channel-4.jpeg" alt="">
           </div>
@@ -82,8 +148,11 @@
         <div class="thumbnail-row">
           <img class="thumbnail" 
           src="thumbnails/thumbnail-5.webp" alt="">
+          <div class="video-time">
+            <p>11:17</p>
+          </div>
         </div>
-        <div class="">
+        <div class="channel-info">
           <div class="channel-picture">
             <img class="profile-picture" src="channel-pictures/channel-5.jpeg" alt="">
           </div>
@@ -99,8 +168,11 @@
         <div class="thumbnail-row">
           <img class="thumbnail" 
           src="thumbnails/thumbnail-6.webp" alt="">
+          <div class="video-time">
+            <p>19:59</p>
+          </div>
         </div>
-        <div class="">
+        <div class="channel-info">
           <div class="channel-picture">
             <img class="profile-picture" src="channel-pictures/channel-6.jpeg" alt="">
           </div>
@@ -116,8 +188,11 @@
         <div class="thumbnail-row">
           <img class="thumbnail" 
           src="thumbnails/thumbnail-7.webp" alt="">
+          <div class="video-time">
+            <p>10:13</p>
+          </div>
         </div>
-        <div class="">
+        <div class="channel-info">
           <div class="channel-picture">
             <img class="profile-picture" src="channel-pictures/channel-7.jpeg" alt="">
           </div>
@@ -133,8 +208,11 @@
         <div class="thumbnail-row">
           <img class="thumbnail" 
           src="thumbnails/thumbnail-8.webp" alt="">
+          <div class="video-time">
+            <p>7:12</p>
+          </div>
         </div>
-        <div class="">
+        <div class="channel-info">
           <div class="channel-picture">
             <img class="profile-picture" src="channel-pictures/channel-8.jpeg" alt="">
           </div>
@@ -150,8 +228,11 @@
         <div class="thumbnail-row">
           <img class="thumbnail" 
           src="thumbnails/thumbnail-9.webp" alt="">
+          <div class="video-time">
+            <p>13:17</p>
+          </div>
         </div>
-        <div class="">
+        <div class="channel-info">
           <div class="channel-picture">
             <img class="profile-picture" src="channel-pictures/channel-9.jpeg" alt="">
           </div>
@@ -167,8 +248,11 @@
         <div class="thumbnail-row">
           <img class="thumbnail" 
           src="thumbnails/thumbnail-10.webp" alt="">
+          <div class="video-time">
+            <p>7:53</p>
+          </div>
         </div>
-        <div class="">
+        <div class="channel-info">
           <div class="channel-picture">
             <img class="profile-picture" src="channel-pictures/channel-10.jpeg" alt="">
           </div>
@@ -184,8 +268,11 @@
         <div class="thumbnail-row">
           <img class="thumbnail" 
           src="thumbnails/thumbnail-11.webp" alt="">
+          <div class="video-time">
+            <p>4:10</p>
+          </div>
         </div>
-        <div class="">
+        <div class="channel-info">
           <div class="channel-picture">
             <img class="profile-picture" src="channel-pictures/channel-11.jpeg" alt="">
           </div>
@@ -201,8 +288,11 @@
         <div class="thumbnail-row">
           <img class="thumbnail" 
           src="thumbnails/thumbnail-12.webp" alt="">
+          <div class="video-time">
+            <p>4:51</p>
+          </div>
         </div>
-        <div class="">
+        <div class="channel-info">
           <div class="channel-picture">
             <img class="profile-picture" src="channel-pictures/channel-12.jpeg" alt="">
           </div>
