--- a/youtube.html
+++ b/youtube.html
@@ -20,17 +20,26 @@
         <input class="search-bar" type="text" placeholder="Search">
         <button class="search-button">
           <img src="icons/search.svg" alt="">
+          <div class="tooltip">Search</div>
         </button>
         <button class="voice-search-button">
           <img src="icons/voice-search-icon.svg" alt="">
+          <div class="tooltip">Search with your voice</div>
         </button>
       </div>
       <div class="right-section">
-        <img class="upload-icon" src="icons/upload.svg" alt="">
-        <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="">
+        <div class="upload-icon-container">
+          <img class="upload-icon" src="icons/upload.svg" alt="">
+          <div class="tooltip">Create</div>
+        </div>
+        <div class="apps-icon-container">
+          <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="">
+          <div class="tooltip">YouTube apps</div>
+        </div>
         <div class="notification-icon-container">
           <img class="notifications-icon" src="icons/notifications.svg" alt="">
           <div class="notification-count">3</div>
+          <div class="tooltip">Notifications</div>
         </div>
         <img class="channel-picture-icon" src="channel-pictures/channel-1.jpeg" alt="">
       </div>
