Channel card and links are added

--- a/youtube.html
+++ b/youtube.html
@@ -75,19 +75,30 @@
     <div class="video-grid">
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" 
-          src="thumbnails/thumbnail-1.webp" alt="">
+          <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY"><img class="thumbnail" 
+            src="thumbnails/thumbnail-1.webp" alt=""></a>
           <div class="video-time">
             <p>14:20</p>
           </div>
         </div>
         <div class="channel-info">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pictures/channel-1.jpeg" alt="">
+            <div class="wrapper">
+              <a href="https://www.youtube.com/c/mkbhd"><img class="profile-picture" src="channel-pictures/channel-1.jpeg" alt="channel-link"></a>
+            </div>
+            <div class="channel-pick">
+              <div>
+                <img class="profile-picture" style="width: 52px;" src="channel-pictures/channel-1.jpeg" alt="">
+              </div>
+              <div>
+                <p><b>Marques Brownlee</b></p>
+                <p>17M subscribers</p>
+              </div>
+            </div>
           </div>
           <div class="video-info">
-            <p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
-            <p class="video-author">Marques Brownlee</p>
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY"><p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p></a>
+            <a href="https://www.youtube.com/c/mkbhd"><p class="video-author">Marques Brownlee</p></a>
             <p class="video-stats">3.4M views &#183; 6 months ago</p>
           </div>
         </div>
@@ -95,19 +106,19 @@
 
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" 
-          src="thumbnails/thumbnail-2.webp" alt="">
+          <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk"><img class="thumbnail" 
+            src="thumbnails/thumbnail-2.webp" alt=""></a>
           <div class="video-time">
             <p>8:22</p>
           </div>
         </div>
         <div class="channel-info">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pictures/channel-2.jpeg" alt="">
+            <a href="https://www.youtube.com/c/markiplier"><img class="profile-picture" src="channel-pictures/channel-2.jpeg" alt=""></a>
           </div>
           <div class="video-info">
-            <p class="video-title">Try Not To Laugh Challenge #9</p>
-            <p class="video-author">Markiplier</p>
+            <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk"><p class="video-title">Try Not To Laugh Challenge #9</p></a>
+            <a href="https://www.youtube.com/c/markiplier"><p class="video-author">Markiplier</p></a>
             <p class="video-stats">19M views &#183; 4 years ago</p>
           </div>
         </div>
@@ -115,19 +126,19 @@
 
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" 
-          src="thumbnails/thumbnail-3.webp" alt="">
+          <a href="https://www.youtube.com/watch?v=FgjPQQeTh1w"><img class="thumbnail" 
+            src="thumbnails/thumbnail-3.webp" alt=""></a>
           <div class="video-time">
             <p>9:13</p>
           </div>
         </div>
         <div class="channel-info">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pictures/channel-3.jpeg" alt="">
+            <a href="https://www.youtube.com/user/SSSniperWolf"><img class="profile-picture" src="channel-pictures/channel-3.jpeg" alt=""></a>
           </div>
           <div class="video-info">
-            <p class="video-title">Crazy Tik Toks Taken Moments Before DISASTER</p>
-            <p class="video-author">SSSniperWolf</p>
+            <a href="https://www.youtube.com/watch?v=FgjPQQeTh1w"><p class="video-title">Crazy Tik Toks Taken Moments Before DISASTER</p></a>
+            <a href="https://www.youtube.com/user/SSSniperWolf"><p class="video-author">SSSniperWolf</p></a>
             <p class="video-stats">12M views &#183; 1 year ago</p>
           </div>
         </div>
