--- a/youtube.html
+++ b/youtube.html
@@ -88,7 +88,7 @@
             </div>
             <div class="channel-pick">
               <div>
-                <img class="profile-picture" style="width: 52px;" src="channel-pictures/channel-1.jpeg" alt="">
+                <img class="profile-picture-pick" src="channel-pictures/channel-1.jpeg" alt="">
               </div>
               <div>
                 <p><b>Marques Brownlee</b></p>
