--- a/youtube.html
+++ b/youtube.html
@@ -5,6 +5,7 @@
       <link rel="stylesheet" href="styles/video.css">
       <link rel="stylesheet" href="styles/header.css">
       <link rel="stylesheet" href="styles/sidebar.css">
+      <link rel="stylesheet" href="styles/responsive.css">
 
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
