--- a/youtube.html
+++ b/youtube.html
@@ -21,6 +21,7 @@
         <input class="search-bar" type="text" placeholder="Search">
         <button class="search-button">
           <img src="icons/search.svg" alt="">
+          <!-- Put position absolute inisde posiiton relative to make the tooltip -->
           <div class="tooltip">Search</div>
         </button>
         <button class="voice-search-button">
